# PRAC_FORMAL_LANGUAGES

./: CMakeLists.txt  README.md
gtests_and_coverage/: install_deps.sh
gtests_and_coverage/tests/01-simple-library/: MainTestCase.cpp
headers_tests/: testsCYK.hpp  testsGenerating.hpp  testsReached.hpp
include/: GetPrintFuncs.hpp  cyk_test.hpp  full.hpp  tests.h
src/: CYK.cpp  GetGrammar.cpp  GetWords.cpp  Globals.cpp  HomskiNormalForm.cpp  Printfuncs.cpp  chomsky_to_greybuh.cpp  earley.cpp  grammar.cpp  main.cpp  own_CYK.cpp  test.cpp
